@@ -1,0 +1,98 @@
+{
+   "abstract" : "Dist::Zilla plugin configuration for me",
+   "author" : [
+      "Nate Glenn <nglenn@cpan.org>"
+   ],
+   "dynamic_config" : 0,
+   "generated_by" : "ExtUtils::MakeMaker version 7.1002, CPAN::Meta::Converter version 2.150005",
+   "license" : [
+      "apache_2_0"
+   ],
+   "meta-spec" : {
+      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
+      "version" : "2"
+   },
+   "name" : "Dist-Zilla-PluginBundle-NGLENN",
+   "no_index" : {
+      "directory" : [
+         "t",
+         "inc"
+      ]
+   },
+   "prereqs" : {
+      "build" : {
+         "requires" : {
+            "ExtUtils::MakeMaker" : "0",
+            "File::Spec" : "0",
+            "File::pushd" : "0",
+            "Path::Tiny" : "0",
+            "Test::DZil" : "0",
+            "Test::More" : "0.96"
+         }
+      },
+      "configure" : {
+         "requires" : {
+            "ExtUtils::MakeMaker" : "6.17"
+         }
+      },
+      "runtime" : {
+         "requires" : {
+            "Dist::Zilla" : "5.014",
+            "Dist::Zilla::Plugin::Authority" : "1.006",
+            "Dist::Zilla::Plugin::Bugtracker" : "1.110",
+            "Dist::Zilla::Plugin::BumpVersionAfterRelease" : "0.003",
+            "Dist::Zilla::Plugin::CPANFile" : "0",
+            "Dist::Zilla::Plugin::CheckChangesHasContent" : "0",
+            "Dist::Zilla::Plugin::CheckMetaResources" : "0.001",
+            "Dist::Zilla::Plugin::CheckPrereqsIndexed" : "0.002",
+            "Dist::Zilla::Plugin::CopyFilesFromBuild" : "0",
+            "Dist::Zilla::Plugin::Git::Contributors" : "0.007",
+            "Dist::Zilla::Plugin::Git::NextVersion" : "0",
+            "Dist::Zilla::Plugin::GithubMeta" : "0.36",
+            "Dist::Zilla::Plugin::InsertCopyright" : "0.001",
+            "Dist::Zilla::Plugin::MetaNoIndex" : "0",
+            "Dist::Zilla::Plugin::MetaProvides::Package" : "1.14",
+            "Dist::Zilla::Plugin::MinimumPerl" : "0",
+            "Dist::Zilla::Plugin::PodWeaver" : "0",
+            "Dist::Zilla::Plugin::Prereqs::AuthorDeps" : "0",
+            "Dist::Zilla::Plugin::PromptIfStale" : "0.011",
+            "Dist::Zilla::Plugin::ReadmeFromPod" : "0.19",
+            "Dist::Zilla::Plugin::RewriteVersion" : "0",
+            "Dist::Zilla::Plugin::RunExtraTests" : "0",
+            "Dist::Zilla::Plugin::TaskWeaver" : "0.101620",
+            "Dist::Zilla::Plugin::Test::Compile" : "2.036",
+            "Dist::Zilla::Plugin::Test::MinimumVersion" : "2.000003",
+            "Dist::Zilla::Plugin::Test::Perl::Critic" : "0",
+            "Dist::Zilla::Plugin::Test::PodSpelling" : "2.006001",
+            "Dist::Zilla::Plugin::Test::Portability" : "0",
+            "Dist::Zilla::Plugin::Test::ReportPrereqs" : "0.016",
+            "Dist::Zilla::Plugin::Test::Version" : "0",
+            "Dist::Zilla::Plugin::TravisCI::StatusBadge" : "0",
+            "Dist::Zilla::Plugin::TravisYML" : "0",
+            "Dist::Zilla::PluginBundle::Filter" : "0",
+            "Dist::Zilla::PluginBundle::Git" : "1.121010",
+            "Dist::Zilla::Role::PluginBundle::Config::Slicer" : "0",
+            "Dist::Zilla::Role::PluginBundle::Easy" : "0",
+            "Dist::Zilla::Role::PluginBundle::PluginRemover" : "0",
+            "Moose" : "0.99",
+            "Pod::Elemental::PerlMunger" : "0.200001",
+            "Pod::Elemental::Transformer::List" : "0.102000",
+            "Pod::Markdown" : "0",
+            "Pod::Weaver" : "4",
+            "Pod::Weaver::Config::Assembler" : "0",
+            "Pod::Weaver::Plugin::WikiDoc" : "0",
+            "Pod::Weaver::Section::Contributors" : "0.008",
+            "Pod::Weaver::Section::Support" : "1.001",
+            "Pod::Wordlist" : "1.10",
+            "Test::Portability::Files" : "0.06",
+            "namespace::autoclean" : "0.09",
+            "perl" : "5.008001",
+            "strict" : "0",
+            "warnings" : "0"
+         }
+      }
+   },
+   "release_status" : "stable",
+   "version" : "0.04",
+   "x_serialization_backend" : "JSON::PP version 2.27300_01"
+}
